[package]
name = "libninja_mir_rust"
version = "0.1.0"
edition = "2021"
description = "Library to transform libninja MIR into Rust code"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "mir_rust"
path = "src/lib.rs"

[dependencies]
check_keyword = "0.2.0"
convert_case = "0.6.0"
libninja_hir = { path = "../hir" }
libninja_mir = { path = "../mir" }
prettyplease = "0.2.16"
proc-macro2 = "1.0.78"
quote = "1.0.9"
regex = "1.10.3"
syn = { version = "2.0.48", features = ["full"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
